# openclaw-social-arbitrage

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
openclaw/social_arb/: __init__.py  cli.py  config.py  orchestrator.py
openclaw/social_arb/analysis/: __init__.py  anomaly_detector.py  bot_filter.py  cross_validator.py  sentiment_analyzer.py  ticker_mapper.py
openclaw/social_arb/collectors/: __init__.py  google_trends.py  news_collector.py  onchain_collector.py  reddit_collector.py  twitter_collector.py
openclaw/social_arb/signals/: __init__.py  edge_estimator.py  signal_generator.py  signal_schema.py
openclaw/social_arb/storage/: __init__.py  baseline_store.py  signal_log.py
openclaw/social_arb/utils/: __init__.py  logger.py  rate_limiter.py
